feat: stream assistant answers over SSE and rebuild chat UI
SSE-only POST /api/chat with live source-usage trace and token events (ADR 0009).
Backend hygiene: Lombok, Commons Lang, dependency bumps. Chat UI: controller-driven
multi-turn layout, trace badges, demo chips, abort handling, and XSS tests.