@@ -3,6 +3,7 @@ package dev.localassistant.assistant.adapters.outbound.cdq;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.safety.Safelist;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.Objects;
 import java.util.regex.Pattern;
@@ -13,7 +14,7 @@ public final class ProductPageTextExtractor {
 
     public String extractPlainText(String html) {
         Objects.requireNonNull(html, "html");
-        if (html.isBlank()) {
+        if (StringUtils.isBlank(html)) {
             throw new IllegalArgumentException("html must not be blank");
         }
 
@@ -21,8 +22,8 @@ public final class ProductPageTextExtractor {
         document.select("script, style, noscript").remove();
         String bodyText = document.body() == null ? document.text() : document.body().text();
         String sanitized = Jsoup.clean(bodyText, Safelist.none());
-        String normalized = WHITESPACE.matcher(sanitized.trim()).replaceAll(" ");
-        if (normalized.isBlank()) {
+        final var normalized = WHITESPACE.matcher(StringUtils.trim(sanitized)).replaceAll(" ");
+        if (StringUtils.isBlank(normalized)) {
             throw new ProductPageExtractionException("No extractable text found in product page HTML");
         }
         return normalized;
