@@ -1,19 +1,20 @@
 package dev.localassistant.assistant.rag;
 
+import lombok.experimental.UtilityClass;
+import org.apache.commons.lang3.StringUtils;
+
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.HexFormat;
 
-public final class ContentHasher {
+@UtilityClass
+public class ContentHasher {
 
     private static final HexFormat HEX = HexFormat.of();
 
-    private ContentHasher() {
-    }
-
     public static String sha256Hex(String normalizedText) {
-        if (normalizedText == null || normalizedText.isBlank()) {
+        if (StringUtils.isBlank(normalizedText)) {
             throw new IllegalArgumentException("normalizedText must not be blank");
         }
         try {
